--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top justify-content-center">
             <ul class="navbar-nav">
-                <li class="nav-item"> <a class="nav-link" href="https://github.com/tcano0505/hackathon_game" class="link">Source Code</a></li>
+                <li class="nav-item"> <a class="nav-link" href="https://github.com/tcano0505/hackathon_game" class="link" target="_blank">Source Code</a></li>
             </ul>
 
         </nav>
